# kylenec-cpcs-mhw

./: .gitignore  0_05_level_mask.mat  ChileCoast_SST_6H.mat  Copy_of_varfig6_upwell.asv  Copy_of_varfig6_upwell.m  Cross_correlation_dSSTa_dt.asv  Cross_correlation_dSSTa_dt.m  Diurnal and Low Frequency Northward Winds off Chile.pptx  IOVWST-poster-draft.pptx  LICENSE.txt  MLD_mean_warming.m  MLD_regression.m  MLD_view.m  Northward-Winds.ipynb  README.md  R_maps.m  SST-climatology.py  SST_analysis.asv  SST_analysis.m  SST_anomaly_maps.m  SST_maps_new.m  SSTevents.m  Stats_Figure_Tutorial.mlx  comparets.asv  comparets.m  dSST_dt_summer_maps.asv  dSST_dt_summer_maps.m  dSSTdt_maps_new.m  environment.yml  explore_winds.m  filter.py  find_SST_events.m  introfigure.m  lanczos-filter.py  mld_linreg_out.mat  ptLavapie_SST.mat  pyPL66.py  q_component_maps.m  qnet_ev_maps.m  sensitivity_test_mthd2.m  (+11 more)
.ipynb_checkpoints/: Cloud Access to ERA-5-checkpoint.ipynb  Cloud-Access-ERA-5-checkpoint.ipynb
Data/: Constitucion-SST-1992-2004.nc
Data-processed/: stat_sig_dSST.mat  stdSST.mat  stdSSTup.mat  std_dSSTdt.mat  std_dSSTdt_up.mat  tscompare.mat  tupwell.mat
Data-raw/: Constitucion-SST-1979-1991.nc  Constitucion-SST-2005-2017.nc  Constitucion-SST-2018-2020.nc
Functions/: acor.m  acov.m  annualclim.m  anomalycube.m  avg_anomaly_significance_mask.m  avgmap.m  bandpass.m  bandpassV2.m  bandpassV3.m  clim1y3d.m  clim1y3dV2.m  crosscorrTL.m  eventmap.m  gcal2datenum.m  landmaskcube.m  nearshoreboxmean.m  peakwarm.m  pl66tn.m  pl66tn3D.m  synoptic_anomaly_sfc.m  threesig.m  upwellszn.m
MHW_functions/: acor.m  annualclim.m  bandpass.asv  bandpass.m  bandpassV2.m  (+6 more)
(+50 files in other folders)
